# number-detector

./: .gitignore  README.md  config.py  diagnostic.py  hsv_mask_tuner.py  main.py  pyproject.toml  requirements.txt  scan_image.py  scan_image_free_text.py  scan_image_motors.py  scan_image_motors_gpt.py  test.py
.github/workflows/: build-release.yml  ci.yml
src/: __init__.py  check_tesseract.py  detector.py  exporter.py  interactive_tuner.py  ui.py
src/number_detector/: __init__.py  __main__.py
src/number_detector/application/: constants.py  ports.py  settings.py
src/number_detector/application/use_cases/: export_excel_use_case.py  list_images_use_case.py  process_folder_use_case.py  scan_batch_images_use_case.py  scan_single_image_use_case.py
src/number_detector/domain/: parsing.py
src/number_detector/domain/models/: bounding_box.py  detection_result.py  image_region.py  list_images_result.py
src/number_detector/infrastructure/: bootstrap.py  excel_exporter.py  imaging.py  ocr.py  runtime.py
src/number_detector/presentation/pyside_app/: main.py  main_window.py  worker.py
src/number_detector/presentation/pyside_app/widgets/: folder_dnd_widget.py
tests/: conftest.py
tests/integration/: test_red_number_detection.py
tests/unit/: test_export_excel_use_case.py  test_list_images_use_case.py  test_logger_service.py  test_parsing.py  test_scan_single_image_use_case.py
